<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_bg"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/other_options"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/LoginLight"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/othr_opt_advance_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/camera_settings"
                android:paddingEnd="10dp"
                android:text="@string/advanced_settings"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/othr_opt_reboot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/settings_othersettings_reboot"
                android:paddingEnd="10dp"
                android:text="@string/reboot_gateway"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/othr_opt_backup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/settings_othersettings_backup"
                android:paddingEnd="10dp"
                android:text="@string/backup_settings"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/othr_opt_restore"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/settings_othersettings_restore"
                android:paddingEnd="10dp"
                android:text="@string/restore_settings"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/othr_opt_include"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/settings_othersettings_include"
                android:paddingEnd="10dp"
                android:text="@string/include_exclude"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/othr_opt_change_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/settings_othersettings_change_password"
                android:paddingEnd="10dp"
                android:text="@string/change_password"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>